<resources>
    <string name="app_name">MQTT Client</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="action_add_connection">Add Connection</string>

    <string name="add_connection_general_label">General</string>
    <string name="add_connection_client_id_label">Client ID</string>
    <string name="add_connection_client_id_default">AndroidClient</string>
    <string name="add_connection_server_label">Server</string>
    <string name="add_connection_server_default">broker.hivemq.com</string>
    <string name="add_connection_port_label">Port</string>
    <string name="add_connection_clean_session_label">Clean Session</string>
    <string name="add_connection_advanced_label">Advanced</string>
    <string name="add_connection_username_label">Username</string>
    <string name="add_connection_password_label">Password</string>
    <string name="add_connection_timeout_label">Timeout</string>
    <string name="add_connection_keepalive_label">Keepalive</string>
    <string name="add_connection_tls_server_key_label">Server TLS Key</string>
    <string name="add_connection_tls_client_key_label">Client TLS Key</string>
    <string name="add_connection_lwt_label">Last Will &amp; Testament</string>
    <string name="add_connection_lwt_topic_label">Topic</string>
    <string name="add_connection_lwt_message_label">Message</string>
    <string name="add_connection_lwt_retain_label">Retain</string>
    <string name="add_connection_lwt_qos_label">QoS</string>
    <string name="hello_world">Hello world!</string>
    <string name="connection_connected_to">Connected to</string>

    <string name="connection_disconnected_from">Disconnected from</string>
    <string name="connection_unknown_status">Unknown connection status to</string>
    <string name="connection_connecting_to">Connecting to</string>
    <string name="connection_disconnecting_from">Disconnecting from</string>
    <string name="connection_error_connecting_to">An error occurred connecting to</string>
    <string name="connection_clear">Clear</string>
    <string name="subscription_new">New Subscription</string>
    <string name="manage_title">Manage Connection</string>

    <string name="manage_delete">Delete Connection</string>
    <string name="manage_edit">Edit Connection</string>
    <string name="notifyTitle">MQTT Message Received</string>
    <string name="notifyForeground">Keep server connection</string>

    <string name="notifyTitle_connectionLost">Lost connection</string>

    <!-- Strings that need formatting  -->
    <string name="notification">received %1$s topic=%2$s</string>
    <string name="toast_pub_success">Published message: %1$s to topic: %2$s</string>
    <string name="toast_sub_success">Subscribed to %1$s</string>
    <string name="toast_disconnected">Disconnected</string>
    <string name="toast_pub_failed">Failed to publish message: %1$s to topic: %2$s</string>
    <string name="toast_sub_failed">Failed to subscribe to %1$s</string>
    <string name="topic_label">Topic</string>

    <!-- Strings for Subscriptions Fragment -->
    <string name="qos_label">QoS</string>
    <string name="notify_label">Show Notifications</string>
    <string name="subscribe_ok">OK</string>
    <string name="subscribe_cancel">Cancel</string>
    <string name="notify_text">Notifications:%1$s</string>

    <string name="home_no_connections">No Connections</string>

    <!-- Home Fragment -->
    <string name="home_no_cons_message">It looks like there are no connections defined yet.</string>
    <string name="message_time">Time:</string>

    <!-- messages -->
    <string name="message_time_fmt">Time: %1$s</string>
    <string name="publish">Publish</string>
    <string name="topic_fmt">Topic:</string>
    <string name="placeholder_main_label">Main Label</string>

    <!-- placeholders -->
    <string name="placeholder_sub_label">Sub Label</string>
    <string name="message_topic">Topic: </string>

</resources>
