<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/subscription_dialog"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textTopic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/topic_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/subscription_topic_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/subscription_qos_spinner"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/textTopic"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/show_notifications_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notify_label"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/subscription_qos_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorSecondary" />

    <TextView
        android:id="@+id/qos_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qos_label"
        app:layout_constraintTop_toTopOf="@id/subscription_qos_spinner"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</androidx.constraintlayout.widget.ConstraintLayout>
